--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -1,5 +1,6 @@
 {
   "name": "e-frontend",
+  "proxy": "http://localhost:5000",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -8,7 +9,9 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.13.2",
+    "framer-motion": "^12.23.25",
     "lottie-react": "^2.4.1",
+    "lucide-react": "^0.555.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-hot-toast": "^2.6.0",
